--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,7 +4,7 @@
     <nav class="navbar">
       <div>
         <ul style="padding-left: 0;">
-          <li style="padding-left: 0;"><a class="our-brand" href="https://www.coachaac.com">Coach AAC</a></li>
+          <li style="padding-left: 0;"><a class="our-brand" href="https://www.coachaac.com">{% asset 26363236-0-Logo.svg %}</a></li>
           <li><span class="muted text-nowrap"><a href="/">Documentation</a></span></li>
         </ul>
       </div>
