nouvelle page : FAQ

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,7 +5,7 @@
       <div>
         <ul style="padding-left: 0;">
           <li style="padding-left: 0;"><a class="our-brand" href="https://www.coachaac.com">{% asset 26363236-0-Logo.svg %}</a></li>
-          <li><span class="muted text-nowrap"><a href="/">Documentation</a></span></li>
+          <li><span class="muted text-nowrap"><a href="/coachaac/">Documentation</a></span></li>
         </ul>
       </div>
     </nav>
